--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^1.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11",
-    "slick-carousel": "^1.7.1"
+    "react-scripts": "1.0.11"
   },
   "main": "server.js",
   "scripts": {
